# skillctl

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  KNOWN_BUGS.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/: README.md
.github/workflows/: ci.yml  release.yml
distribution/claude-code-plugin/: README.md
distribution/claude-code-plugin/skillctl/: SKILL.md
distribution/claude-code-plugin/skillctl/scripts/: install.sh  load.sh  suggest.sh
distribution/homebrew/: README.md  skillctl.rb
distribution/npm/: .npmignore  README.md  package.json  publish.md
docs/: comparison.md  install-codex.md  install-cursor.md
docs/launch/: demo.md  hn-show.md  one-pager.md  r-claudeai.md  r-cursor.md
eval/example-rules/: suggest-output.json  suggest-summary.md  test_prompts.txt
eval/example-rules/.skillctl/: bundles.yaml  index.yaml
eval/example-rules/.skillctl/rules/: accessibility.md  alerting.md  api-design.md  api-versioning.md  architecture-overview.md  ask-before-assuming.md  authentication.md  authorization.md  background-jobs.md  backups.md  caching.md  jwt.md  (+52 more)
examples/.skillctl/: bundles.yaml  index.yaml
examples/.skillctl/rules/: agent-handoff.md  branch-management.md  dependency-audit.md  docker-control.md  hypothesis-tracking.md  incremental-edits.md  repro-first.md  safe-deploy.md  scope-freeze.md  secrets-scan.md  security-review.md  test-coverage.md  three-strikes.md  workspace-isolation.md
scripts/: gen_example_corpus.py  run_suggestions.py
src/skillctl/: __init__.py  _audit.py  _build.py  _cli.py  _config.py  _errors.py  _inject.py  _install.py  _loader.py  _matching.py  _migrate.py  _registry.py
tests/: test_cli.py  test_distribution.py  test_edge_cases.py  test_errors.py  test_eval_scripts.py  test_examples.py  test_hook.py  test_migrate.py  test_packaging.py  test_smoke.py
